Revert "Removed default content from app componant template-test"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1> Welcome to Facebook-clone Test</h1>
+
+  <h1>
+    Welcome to Facebook-clone
+  </h1>
 <router-outlet></router-outlet>
